# gecos

./: .gitignore  02-EVOH_allconf_ob_noopt_trj.mol2  README.md  nohup.out  requirements.txt  setup.cfg  setup.py
data/: nitrobenzene.sdf  nitrobenzene_frompdb.sdf
data/PP/: AtacPS_frompdb.sdf  PET_frompdb.sdf  nitrobenzene_p.sdf
docs/: 00-release_notes.md  02-installation.md  03-setupgecosgui.md  Untitled.ipynb  ap01-slurm.md  conf.py  xx-gui_sections.md  xx-key-localhost.md
docs/files/: Model01_EVOH.gjf
docs/lizard_small/: README.txt
docs/source/: api-docs.rst  gecos-api.rst
examples/: a.json
examples/02-IsoP_trueno_rdkit_pm3/: 02-IsoP_trueno.db  test01.json  test02.json  test02.py  (+1 more)
gecos/: __init__.py  gecos.py  gecos_extract_neighbors.py  gecos_pybabel.py  gecos_rdkit.py  gecos_systematic_grid.py  send_qm_conformers.py
gecos_analysis/: gecos_analysis.py  gecos_exp_irspectra.py  gecos_irspectra.py  gecos_outputgaussian.py  gecos_resp_analysis.py
gecos_gui/: .json  04-IsoP_all_conf_opt.mol2  06-PVA_allconf_ob_noopt_trj.mol2  07-EVA_allconf_ob_noopt_trj.mol2  common_elements.py  events.py  events_check.py  events_export.py  events_import.py  events_open.py  general_inputs_tab.py  main_figure_layout.py  main_tabgroup.py  maingui.py  menu_layout.py  prop_conf_tab.py  test.py  test2.py  test3.py  test4.py  test6.py  test7.py
tests/: Model01.json  Model01.py  Model01_save.json  a.json  a.py  nohup.out  t.json
tests_pysimplegui/: test5.py
utils/: DBJobs.py  ServerSlurm.py  __init__.py  atomic_data.py  gaussian16.py  pdbtosdf.py  print_header.py
(+2129 files in other folders)
