[metadata]
name = gecos
version = attr: gecos.__version__
description = Python library to easily generate conformers of small molecules with QM support.
long_description = file: README.md
author = Javier Ramos
author_email = jrdcasa@gmail.com

[options]
zip_safe = false
packages = find:
test_suite = tests
include_package_data = true

[options.packages.find]
exclude =
    docs
    examples
    recipes
    tests
    dist
    Gecos.egg-info
    build

[options.data_files]
thirdparty = thirdparty/dockrmsd/dockrmsd.x


[bdist_wheel]
universal = true